<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_activity_bg_02"
    tools:context="studio.imedia.vehicleinspection.LoginActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <TextView
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="手机号"
            android:textSize="14sp"
            android:textColor="@color/color_text_default" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:inputType="phone"
            android:singleLine="true"
            android:maxLength="@integer/max_length_phone_num"
            android:textSize="14sp"
            android:textColor="@color/color_text_default"
            android:hint="@string/hint_input_phone_number"
            android:background="@null"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="密码"
            android:textSize="14sp"
            android:textColor="@color/color_text_default"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:inputType="numberPassword"
            android:singleLine="true"
            android:maxLength="@integer/max_length_password"
            android:hint="@string/hint_input_password"
            android:textSize="14sp"
            android:textColor="@color/color_text_default"
            android:background="@null"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="right"
        android:text="注册新用户？"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:background="@null"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="登录"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:background="@drawable/btn_bg_corner_round_color_primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_agree"
            android:textSize="14sp"
            android:textColor="@color/color_text_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_service_protocol"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
